@@ -721,6 +721,8 @@ protected:
     virtual void OnDestroy()
     {
         machine_ = 0;
+
+        delete this;
     }
 private:
     nMachine * machine_;
