@@ -844,6 +844,8 @@ public:
     {
         if ( warned_ )
             con << "Flood protection ban of " << GetIP() << " removed because machine is discarded.\n";
+
+        delete this;
     }
 
     void Block()
